# libretro-moonlight

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindFFMPEG.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt  libretro.c  test.c
src/libgamestream/: CMakeLists.txt  README  client.c  test.c  uuid.c  uuid.h
src/video/: ffmpeg.c  ffmpeg.h
